Carpeta "HTML" eliminada

--- a/contacto.html
+++ b/contacto.html
@@ -36,38 +36,35 @@
 
             <div class="faq__div">
                 <h1>Preguntas frecuentes</h1>
-                <li><img src="images/iconos/icon-perfil.png" alt=""><a href="https://contact.pepsico.com/pepsi/contact-us">Problema con el producto o queja sobre la calidad</a></li>
+                <li><img src="css/images/iconos/icon-perfil.png" alt=""><a href="https://contact.pepsico.com/pepsi/contact-us">Problema con el producto o queja sobre la calidad</a></li>
                 <hr>
-                <li><img src="images/iconos/icon-face.png" alt=""><a href="https://contact.pepsico.com/pepsi/contact-us">Comparte tu historia o felicita</a></li>
+                <li><img src="css/images/iconos/icon-face.png" alt=""><a href="https://contact.pepsico.com/pepsi/contact-us">Comparte tu historia o felicita</a></li>
                 <hr>
-                <li><img src="images/iconos/icon-luz.png" alt=""><a href="https://contact.pepsico.com/pepsi">Envia tu sugerencia</a></li>
+                <li><img src="css/images/iconos/icon-luz.png" alt=""><a href="https://contact.pepsico.com/pepsi">Envia tu sugerencia</a></li>
                 <hr>
-                <li><img src="images/iconos/icon-ticket.png" alt=""><a href="https://contact.pepsico.com/pepsi">Pregunta sobre una promoción</a></li>
+                <li><img src="css/images/iconos/icon-ticket.png" alt=""><a href="https://contact.pepsico.com/pepsi">Pregunta sobre una promoción</a></li>
                 <hr>
-                <li><img src="images/iconos/icon-camion.png" alt=""><a href="https://contact.pepsico.com/pepsi/contact-us">Pregunta sobre un pedido online</a></li>
+                <li><img src="css/images/iconos/icon-camion.png" alt=""><a href="https://contact.pepsico.com/pepsi/contact-us">Pregunta sobre un pedido online</a></li>
                 <hr>
-                <li><img src="images/iconos/icon-etiqueta.png" alt=""><a href="https://contact.pepsico.com/pepsi/contact-us">Patrocinio y donaciones</a></li>
+                <li><img src="css/images/iconos/icon-etiqueta.png" alt=""><a href="https://contact.pepsico.com/pepsi/contact-us">Patrocinio y donaciones</a></li>
                 <hr>
-                <li><img src="images/iconos/icon-maletin.png" alt=""><a href="entrevista.html">Carreras</a></li>
+                <li><img src="css/images/iconos/icon-maletin.png" alt=""><a href="entrevista.html">Carreras</a></li>
                 <hr>
-                <li><img src="images/iconos/icon-carrito.png" alt=""><a href="pepsi.html">Busca un producto</a></li>
+                <li><img src="css/images/iconos/icon-carrito.png" alt=""><a href="pepsi.html">Busca un producto</a></li>
                 <hr>
-                <li><img src="images/iconos/icon-comentario.png" alt=""><a href="https://contact.pepsico.com/pepsi/faqs">FAQs</a></li>
+                <li><img src="css/images/iconos/icon-comentario.png" alt=""><a href="https://contact.pepsico.com/pepsi/faqs">FAQs</a></li>
             </div>
 
             <div class="contact__div">
                 <h1><img src="images/iconos/icon-share.png" alt=""> Nuestras redes sociales</h1>
                 <ul>
-<<<<<<< HEAD
-                    <li>
-                        <a href="#" class="logo_x"><img src="css/images/x-logo.png" alt="Logo de X" sizes=""></a>
-=======
+
                     <li class="li-logos">
-                        <a href="https://twitter.com/pepsi"><img src="images/x-logo.png" class="logo_x" alt="Logo de X" sizes=""></a>
-                        <a href="https://www.facebook.com/PepsiUS"><img src="images/fb-logo.png" class="logo_fb" alt="Logo de Facebook" sizes=""></a>
-                        <a href="https://www.youtube.com/user/Pepsi"><img src="images/yt-logo.png" class="logo_yt" alt="Logo de Youtube" sizes=""></a>
-                        <a href="https://www.instagram.com/pepsi"><img src="images/ig-logo.png" class="logo_ig" alt="Logo de Instagram" sizes=""></a>
->>>>>>> efbe0b3280c2d56dceddc926f1b7e3d782086ff8
+                        <a href="https://twitter.com/pepsi"><img src="css/images/x-logo.png" class="logo_x" alt="Logo de X" sizes=""></a>
+                        <a href="https://www.facebook.com/PepsiUS"><img src="css/images/fb-logo.png" class="logo_fb" alt="Logo de Facebook" sizes=""></a>
+                        <a href="https://www.youtube.com/user/Pepsi"><img src="css/images/yt-logo.png" class="logo_yt" alt="Logo de Youtube" sizes=""></a>
+                        <a href="https://www.instagram.com/pepsi"><img src="css/images/ig-logo.png" class="logo_ig" alt="Logo de Instagram" sizes=""></a>
+
                     </li>
                 </ul>
             </div>
