--- a/entrevista.html
+++ b/entrevista.html
@@ -64,7 +64,7 @@
                     <textarea name="textarea" id="info-form" placeholder="Escribe algo..."></textarea>
                 </div>
 
-                <input type="button" value="Enviar" id="btn">
+                <input type="button" value="Enviar" class="btn-env" id="btn">
             </div>
     </main>
     <script src="js/entrevista.js"></script>
