Boton index y SING IN

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <li class="items_productos"><a href="pepsi.html">Productos</a></li>
                         <li class="items_contacto"><a href="contacto.html">Contacto</a></li>
                         <li class="items_entrevista"><a href="entrevista.html">Entrevista</a></li>
+                        <li class="items_login"><a href="login.html">Login</a></li>
                 </ul>
             </nav>
         </header>
@@ -31,9 +32,9 @@
                 <h1>Bienvenido</h1>
                 <h2>Empecemos</h2>
                 <li>
-                    <a href="#">Desliza para informacion</a>
+                    <a>Desliza para informacion</a>
                     <br>
-                    <button onclick="irAbajo()">▼</button>                     
+                    <button onclick="irAbajo(event)">▼</button>                     
                 </li>
             </div>
             <div class="container__img"><img src="https://www.pepsi.com/assets/images/cans/can-2.webp" alt="logo de pepsi"></div>
@@ -72,7 +73,7 @@
                          *Actual prize may vary from what’s shown.</a>
                 </li>
             </div>
-            
+
             <div class="videos">
                 <iframe src="https://youtu.be/mbfmx1eXLuc" frameborder="0"
                 width="1200px" height="560px"></iframe>
@@ -80,6 +81,7 @@
                 <iframe src="css/videos/pepsi-cans-mobile.mp4" frameborder="0"
                 width="1200px" height="560px"></iframe>
             </div>
+            
             <section id="seccion-destino"></section>
         </div>
     </main>
