--- a/login.html
+++ b/login.html
@@ -11,29 +11,30 @@
         <div class="container-img">
             <a href="index.html"><img src="https://www.pepsi.com/assets/images/pepsi-logos/logo-0.png"></a>
         </div>
-        <div class="form_login">
+        <form class="form_login">
             <h1>SIGN IN</h1>
-        
+            <p>Enter your email and password used at registration or your PepsiCo Tasty Rewards credentials to access your account.</p>
+
                 <div class="form__email">
-                    <input type="email" placeholder="Email Adress" id="name-form"> <input type="password" placeholder="" id="password-form">
-                    <button class="mostrar" onclick="mostrarContraseña()">VER</button>
+                    <input type="email" placeholder="EMAIL ADDRESS" name="email" id="name-form"> <input type="password" name="clave" placeholder="PASSWORD ADDRESS" id="password-form"><span class="mostrar" style="cursor: pointer;" onclick="mostrarContraseña()"><img src="css/images/iconos/show.png" width="20" style="margin-left: -30px; margin-bottom: -5px;"></span>
                 </div>
 
                 <div class="form__btn">
-                    <input type="button" id="btn-form">
+                    <input type="submit" value="Enviar" id="btn-form">
                 </div>
+        </form>
     </div>
     <script>
         function mostrarContraseña(){
             const passwordInput = document.getElementById("password-form");
-            const icon = document-querySelector(".mostrar");
+            const icon = document.querySelector(".mostrar");
 
-            if (passwordInput.type === "password-form"){
+            if (passwordInput.type === "password"){
                 passwordInput.type = "text";
-                icon.textContent="NO VEO";
+                icon.innerHTML = '<img src="css/images/iconos/show.png" alt="Ocultar" width="20" style="margin-left: -30px; margin-bottom: -5px;">';
             } else{
-                passwordInput.type = "password-form";
-                icon.textContent = "VER";
+                passwordInput.type = "password";
+                icon.innerHTML = '<img src="css/images/iconos/esconder.png" alt="Ocultar" width="20" style="margin-left: -30px; margin-bottom: -5px;">';
             }
         }
     </script>
