--- a/login.html
+++ b/login.html
@@ -22,6 +22,16 @@
                 <div class="form__btn">
                     <input type="submit" value="Enviar" id="btn-form">
                 </div>
+                
+                <div class="form__dbj-btn">
+                    Forgot your password? Click <a href="#" style="color: white;">HERE</a> to reset.
+                    <hr style="width: 260px;">
+                    Not yet registered?
+                </div>
+
+                <div class="form__register-btn">
+                    <input type="button" value="Registro" id="btn-register">
+                </div>
         </form>
     </div>
     <script>
