--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="form__btn">
-                    <input type="submit" value="Enviar" id="btn-form">
+                    <input type="button" value="Enviar" id="btn-form">
                 </div>
                 
                 <div class="form__dbj-btn">
@@ -48,6 +48,6 @@
             }
         }
     </script>
-    <script src="login.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
